--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Rapid
+RAPIDAPI_HOTEL_HOST="x-rapidapi-host: hotels4.p.rapidapi.com"
+RAPIDAPI_WEATHER_HOST="x-rapidapi-host: community-open-weather-map.p.rapidapi.com"
+RAPIDAPI_KEY="x-rapidapi-key: 8c81ef78c8msh54413f88200395ep1a3368jsncb53237ed8a8"
