--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 RAPIDAPI_HOTEL_HOST="x-rapidapi-host: hotels4.p.rapidapi.com"
 RAPIDAPI_WEATHER_HOST="x-rapidapi-host: community-open-weather-map.p.rapidapi.com"
 RAPIDAPI_KEY="x-rapidapi-key: 8c81ef78c8msh54413f88200395ep1a3368jsncb53237ed8a8"
+
+# Google maps static api
+GOOGLE_MAPS_STATIC_API_KEY="AIzaSyAKpeS0-W6Sn4ie_XYoDXtPkQklnnep9RA"
