--- a/.env.example
+++ b/.env.example
@@ -57,4 +57,4 @@ RAPIDAPI_WEATHER_HOST=
 RAPIDAPI_KEY=
 
 # Google maps static api
-GOOGLE_MAPS_STATIC_API_KEY="AIzaSyAKpeS0-W6Sn4ie_XYoDXtPkQklnnep9RA"
+GOOGLE_MAPS_STATIC_API_KEY=
